--- a/style.css
+++ b/style.css
@@ -2,4 +2,22 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+nav a {
+  background-color: lightgrey;
+  padding: 10px,10px,0,0;
+}
+#featured-property p{
+  width: 800px;
+  margin-left:auto;
+  margin-right: auto;
+  text-align: center;
+  
+}
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background: red;
 }
